--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="./style.css" />
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <title>Document</title>
   </head>
@@ -15,7 +16,7 @@
       class="flex flex-col items-center justify-center w-[100vw] h-[100vh] bg-indigo-900m"
     >
 
-      <h1 class="font-extrabold text-3xl">Password Generator</h1>
+      
       <!-- card -->
       <div class="flex flex-col justify-center items-center min-w-[300px] ">
         <!-- heading -->
