--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- card -->
       <div class="flex flex-col justify-center items-center min-w-[300px] ">
         <!-- heading -->
-        <h1 class="text-xl font-bold text-white">PASSWORD GENERATOR</h1>
+        <h1 class="text-xl font-bold text-black">PASSWORD GENERATOR</h1>
 
         <!-- output password  -->
         <div
