--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- container -->
     <div
-      class="flex flex-col items-center justify-center w-[100vw] h-[100vh] bg-indigo-900m"
+      class="flex flex-col items-center justify-center w-[100vw] h-[100vh] bg-indigo-900"
     >
 
       
