--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Document</title>
   </head>
   <body>
@@ -15,73 +23,94 @@
     <div
       class="flex flex-col items-center justify-center w-[100vw] h-[100vh] bg-indigo-900"
     >
-
-      
       <!-- card -->
-      <div class="flex flex-col justify-center items-center min-w-[300px] ">
+      <div class="flex flex-col justify-center items-center min-w-[300px]">
         <!-- heading -->
-        <h1 class="text-xl font-bold text-black">PASSWORD GENERATOR</h1>
+        <h1 class="text-xl font-bold text-white">PASSWORD GENERATOR</h1>
 
-        <!-- output password  -->
+        <!-- output password container-display -->
         <div
-          class="flex flex-row w-full justify-between px-6 py-3 bg-blue-950 rounded-md m-3"
+          class="flex flex-row w-full justify-between px-6  bg-blue-950 rounded-md m-4 border-b-violet-800 border-b-4 relative display-container"
         >
-          <input readonly placeholder="Password" data-passwordDisplay class="bg-blue-950 text-yellow-400 font-bold text-center">
+          <input
+            readonly
+            placeholder="Password"
+            data-passwordDisplay
+            class="text-yellow-400 font-bold py-5 text-xl outline-none w-full leading-4 bg-transparent display"
+          />
           <!-- copy button -->
-          <button data-copyTo>
+          <button data-copyTo class="absolute top-[50%] right-[10%] translate-y-[-50%]">
             <span data-copyMsg></span>
             <i data-feather="copy" class="h-4 w-4 text-white"></i>
           </button>
         </div>
 
-        <div class="w-full  bg-blue-950 rounded-md">
+        <div class="w-full bg-blue-950 rounded-md ">
           <!-- password length -->
           <div class="w-full flex flex-col items-center">
-            <div class="flex justify-between px-6 my-3 w-full bg-blue-950 py-4 items-center">
+            <div
+              class="flex justify-between px-6 my-3 w-full bg-blue-950 py-4 items-center"
+            >
               <h3 class="font-bold text-white">Password length</h3>
               <!-- password length display -->
-              <div class="bg-slate-900 text-yellow-400 text-center font-bold px-1 py-2" data-lengthNumber ></div>
+              <div
+                class="bg-slate-900 text-yellow-400 text-center font-bold px-1 py-2"
+                data-lengthNumber
+              ></div>
             </div>
             <!-- password length slider -->
             <div class="w-full px-6">
-              <input type="range" min="1" max="20" class="w-full" data-lengthSlider>
+              <input
+                type="range"
+                min="1"
+                max="20"
+                class="w-full slider"
+                data-lengthSlider
+              />
             </div>
-
           </div>
 
           <!-- password options -->
           <div class="bg-blue-950 w-full px-6 flex-col">
-            <div class="flex gap-3">
-              <input type="checkbox" class="" id="uppercase"/>
-              <label for="uppercase" class="text-white">Includes Uppercase letters</label>
+            <div class="flex gap-3 check">
+              <input type="checkbox" class="" id="uppercase" />
+              <label for="uppercase" class="text-white cursor-pointer"
+                >Includes Uppercase letters</label
+              >
             </div>
 
-            <div class="flex gap-3">
-              <input type="checkbox" id="lowercase"/>
-              <label for="lowercase" class="text-white">Includes Lowercase letters</label>
+            <div class="flex gap-3 check">
+              <input type="checkbox" id="lowercase" />
+              <label for="lowercase" class="text-white cursor-pointer"
+                >Includes Lowercase letters</label
+              >
             </div>
 
-            <div class="flex gap-3">
-              <input type="checkbox" id="number"/>
-              <label for="number" class="text-white">Includes Numbers</label>
+            <div class="flex gap-3 check">
+              <input type="checkbox" id="number" />
+              <label for="number" class="text-white cursor-pointer">Includes Numbers</label>
             </div>
 
-            <div class="flex gap-3">
-              <input type="checkbox" id="symbol"/>
-              <label for="symbol" class="text-white">Includes Symbols</label>
+            <div class="flex gap-3 check">
+              <input type="checkbox" id="symbol" />
+              <label for="symbol" class="text-white cursor-pointer">Includes Symbols</label>
             </div>
           </div>
 
           <!-- password strength -->
-          <div class="w-full px-6 font-bold text-lg flex justify-between items-center my-3">
+          <div
+            class="w-full px-6 font-bold text-lg flex justify-around items-center mb-[1.5rem] mt-[1rem]"
+          >
             <h2 class="text-white">Strength</h2>
             <!-- green light red light -->
-            <div data-indicator class="h-5 w-5 rounded-[50%]"></div>
+            <div data-indicator class="h-7 w-7 rounded-[50%]"></div>
           </div>
 
           <!-- button for Generate Password -->
           <div class="w-full px-6 mb-3">
-            <button class="w-full  generateButton  bg-pink-900 py-3 rounded-md" >Generate Password</button>
+            <button class="w-full generateButton text-white text-lg font-bold bg-purple-950 py-3 rounded-md border-b-violet-800 border-b-4 ">
+              Generate Password
+            </button>
           </div>
         </div>
       </div>
