--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           />
           <!-- copy button -->
           <button data-copyTo class="absolute top-[50%] right-[10%] translate-y-[-50%]">
-            <span data-copyMsg></span>
+            <span data-copyMsg class="copy-text"></span>
             <i data-feather="copy" class="h-4 w-4 text-white"></i>
           </button>
         </div>
@@ -99,7 +99,7 @@
 
           <!-- password strength -->
           <div
-            class="w-full px-6 font-bold text-lg flex justify-around items-center mb-[1.5rem] mt-[1rem]"
+            class="w-full px-6 font-bold text-lg flex justify-around items-center mb-[2rem] mt-[1rem]"
           >
             <h2 class="text-white">Strength</h2>
             <!-- green light red light -->
@@ -107,7 +107,7 @@
           </div>
 
           <!-- button for Generate Password -->
-          <div class="w-full px-6 mb-3">
+          <div class="w-full px-6 mb-8">
             <button class="w-full generateButton text-white text-lg font-bold bg-purple-950 py-3 rounded-md border-b-violet-800 border-b-4 ">
               Generate Password
             </button>
